--- a/index.html
+++ b/index.html
@@ -1,30 +1,109 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Employee Manager</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>Employee Manager</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Employee Manager</h1>
-  <button id="addEmployeeBtn">Thêm NV</button>
-  <div id="addEmployeeForm" style="display:none;">
-    <label for="stt">STT:</label><input type="text" id="stt" name="stt"><br>
-    <label for="hoTen">Họ tên:</label><input type="text" id="hoTen" name="hoTen"><br>
-    <label for="email">Email:</label><input type="email" id="email" name="email"><br>
-    <label for="soDienThoai">Số điện thoại:</label><input type="tel" id="soDienThoai" name="soDienThoai"><br>
-    <button id="saveEmployeeBtn">Lưu</button>
-  </div>
-  <button id="bulkEditBtn">Chỉnh sửa hàng loạt</button>
-  <div id="bulkEditForm" style="display:none;">
-    <label for="columnIndices">Column Indices (comma-separated):</label><input type="text" id="columnIndices" name="columnIndices"><br>
-    <label for="newValues">New Values (comma-separated):</label><input type="text" id="newValues" name="newValues"><br>
-    <button id="saveBulkEditBtn">Lưu</button>
-  </div>
-  <div id="app"></div>
-  <script>
-    require('./renderer.js');
-    displayData();
-  </script>
+    <div class="container">
+        <h1>Dữ liệu nhân viên</h1>
+
+        <div class="sticky-header">
+            <div class="filter-container">
+                <input type="text" id="filter-stt" placeholder="Lọc theo STT">
+                <input type="text" id="filter-name" placeholder="Lọc theo Tên">
+                <input type="text" id="filter-dob" placeholder="Lọc theo Ngày sinh">
+                <input type="text" id="filter-address" placeholder="Lọc theo Địa chỉ">
+                <input type="text" id="filter-phone" placeholder="Lọc theo Số điện thoại">
+                <input type="text" id="filter-position" placeholder="Lọc theo Chức vụ">
+                <input type="text" id="filter-department" placeholder="Lọc theo Phòng ban">
+                <input type="text" id="filter-start-date" placeholder="Lọc theo Ngày vào làm">
+                <input type="text" id="filter-status" placeholder="Lọc theo Trạng thái">
+                <button id="apply-filter">Áp dụng bộ lọc</button>
+                <button id="clear-filter">Xóa bộ lọc</button>
+            </div>
+
+            <div class="button-container">
+                <button id="add-employee-btn">Thêm nhân viên</button>
+                <button id="bulk-edit-btn">Chỉnh sửa hàng loạt</button>
+                <button id="refresh-btn">Làm mới dữ liệu</button>
+            </div>
+        </div>
+
+        <!-- Modal Overlay -->
+        <div class="modal-overlay" id="modal-overlay"></div>
+
+        <div class="add-employee-form-container" id="add-employee-form-container">
+            <h2>Thêm nhân viên mới</h2>
+            <button class="close-button" id="close-add-employee-form">&times;</button>
+            <form id="add-employee-form">
+                <input type="text" id="new-stt" placeholder="Nhập STT" readonly hidden>
+                <input type="text" id="new-name" placeholder="Nhập Họ và tên">
+                <input type="text" id="new-employee-id" placeholder="Nhập Mã nhân viên">
+                <select id="new-gender">
+                    <option value="Nam">Nam</option>
+                    <option value="Nữ">Nữ</option>
+                    <option value="Khác">Khác</option>
+                </select>
+                <input type="date" id="new-dob">
+                <input type="text" id="new-phone" placeholder="Nhập Số điện thoại">
+                <input type="text" id="new-email" placeholder="Nhập Email">
+                <input type="text" id="new-bank" placeholder="Nhập Ngân hàng">
+                <input type="text" id="new-account-number" placeholder="Nhập Số tài khoản">
+                <input type="text" id="new-account-holder" placeholder="Nhập Chủ tài khoản">
+                <input type="text" id="new-managing-unit" placeholder="Nhập Đơn vị chủ quản">
+                <select id="new-status">
+                    <option value="Đang làm">Đang làm</option>
+                    <option value="Đã nghỉ">Đã nghỉ</option>
+                    <option value="Xa thải">Xa thải</option>
+                </select>
+                <button type="submit">Thêm nhân viên</button>
+                <button type="button" id="cancel-add-employee">Hủy</button>
+            </form>
+        </div>
+
+        <div class="bulk-edit-form-container" id="bulk-edit-form-container">
+            <h2>Chỉnh sửa nhân viên hàng loạt</h2>
+            <form id="bulk-edit-form">
+                <textarea id="bulk-edit-data" rows="10" cols="50" placeholder="Dán dữ liệu vào đây theo định dạng: STT,Họ và tên,Ngày sinh,Địa chỉ,Số điện thoại,Chức vụ,Phòng ban,Ngày vào làm,Trạng thái"></textarea>
+                <button type="submit">Áp dụng chỉnh sửa hàng loạt</button>
+                <button type="button" id="cancel-bulk-edit">Hủy</button>
+            </form>
+        </div>
+
+        <table id="employee-table">
+            <thead>
+                <tr>
+                    <th></th>    
+                    <th>STT</th>
+                    <th>Họ và tên</th>
+                    <th>Mã nhân viên</th>
+                    <th>Giới tính</th>
+                    <th>Ngày sinh</th>
+                    <th>Số điện thoại</th>
+                    <th>Email </th>
+                    <th>Ngân hàng </th>
+                    <th>Số tài khoản </th>
+                    <th>Chủ tài khoản</th>
+                    <th>Đơn vị chủ quản</th>
+                    <th>Trạng thái</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Data will be loaded here -->
+            </tbody>
+        </table>
+    </div>
+
+    <div id="custom-context-menu" class="custom-context-menu">
+        <ul>
+            <li id="context-menu-copy">Sao chép</li>
+            <li id="context-menu-edit">Chỉnh sửa</li>
+            <li id="context-menu-delete">Xóa</li>
+        </ul>
+    </div>
+
+    <script src="renderer.js"></script>
 </body>
 </html>
