update delete clickbox

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <div class="button-container">
                 <button id="add-employee-btn">Thêm nhân viên</button>
                 <button id="bulk-edit-btn">Chỉnh sửa hàng loạt</button>
+                <button id="delete-selected-btn">Xóa hàng đã chọn</button>
                 <button id="refresh-btn">Làm mới dữ liệu</button>
             </div>
         </div>
