update cau truc project

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Employee Manager</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/styles/style.css">
 </head>
 <body>
     <div class="container">
@@ -122,6 +122,6 @@
         </ul>
     </div>
 
-    <script src="renderer.js"></script>
+    <script src="src/renderer/app.js"></script>
 </body>
 </html>
